pushed content area back to fix bug
Hovering over links in the content area of my blog template was causing
the content area to jump to the front and cover the top of the page.
Added z-index; -25 to prevent this.

--- a/unit1_projects/stylesheets/blog.css
+++ b/unit1_projects/stylesheets/blog.css
@@ -60,6 +60,7 @@ a:hover{
 	top: 85px;
 	left: 0;
 	position: absolute;
+	z-index: -25;
 }
 
 #post{
